PRJ_VER=0.7.1.99
SUMMARY=
BODHI_UPDATE_TYPE=bugfix
REDHAT_BUGZILLA=
[Changes]
- Renamed MANAGE_VARIABLE with MANAGE_VARIABLE_PATH,
  because it is what the variable actually store.
- Move the cmake policies to the front.
- Revised ManageTranslation, now zanata.xml.in can be put to either
  CMAKE_SOURCE_DIR} or CMAKE_CURRENT_SOURCE_DIR.